# fluid-simulation-xmake

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build_ninja.bat  clean.bat  xmake.lua
include/: input.h  particle.h  threadpool.h
src/: input.cpp  input.hpp  main.cpp  particle.cpp  quickpool.hpp  threadpool.cpp
